--- a/components/files.html
+++ b/components/files.html
@@ -879,6 +879,27 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
       );
     })
 
+    $('#launch').on('click', () => {
+      session.meta.startTime = Date.now();
+      $('#launch').prop('disabled', true);
+      document.getElementById('loading-information').innerHTML="<p>Processing file(s)...</p>";
+      new Promise(function(resolve, reject) {
+        $('#loading-information-modal').on('shown.bs.modal', function (e) {
+          session.messages = [];
+          $('#loading-information').html('');
+          resolve("done");
+        });
+        $('#loading-information-modal').modal({
+          backdrop: false,
+          keyboard: false
+        });
+        setTimeout(() => reject(new Error("Problem loading information modal!")), 5000);  
+      }).then(
+        result => launch(), // 
+        error => {alert(error); launch(); } // informational modal doesn't load
+      );
+    })
+
     const launch = async () => {
       temp.messageTimeout = setTimeout(() => {
         $('#loadCancelButton').slideDown();
@@ -933,12 +954,15 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
                 session.data.linkFields.push(key);
               }
             }
+            // Set distance if distance set (field 3)
             l += MT.addLink(Object.assign({
               source: '' + safeLink[file.field1],
               target: '' + safeLink[file.field2],
               origin: origin,
               visible: true,
-              distance: file.field3 == 'None' ? 0 : parseFloat(safeLink[file.field3])
+              distance: file.field3 == 'None' ? 0 : parseFloat(safeLink[file.field3]),
+              hasDistance : file.field3 !== 'None' ? true : false,
+              distanceOrigin: file.field3 !== 'None' ? file.name : ''
             }, safeLink), check);
           };
 
@@ -1125,7 +1149,9 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
                     source: source,
                     target: target,
                     origin: origin,
-                    distance: parseFloat(cell)
+                    distance: parseFloat(cell),
+                    hasDistance: true,
+                    distanceOrigin: file.name
                   }, check);
                 });
               }
@@ -1163,7 +1189,9 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
                 source: source,
                 target: labels[j],
                 origin: origin,
-                distance: parseFloat(matrix[i][j])
+                distance: parseFloat(matrix[i][j]),
+                distanceOrigin: file.name,
+                hasDistance: true
               }, check);
               links++;
             }
