Set distance arrows to genetic distance only

--- a/components/2d_network.html
+++ b/components/2d_network.html
@@ -822,6 +822,15 @@ Note that this may cause slow performance on larger networks.">
       updateLinkColor();
       scaleLinkWidth();
 
+       // Check if arrows visible and draw them
+       if(settings['link-directed']) {
+        svg.select('g.links').selectAll('line').attr('marker-end', function(l) {
+          if (l.directed || l.directed == null) {
+            return 'url(#end-arrow)';
+          } 
+        });
+      }
+
       let linklabels = svg.select('g.links').selectAll('text').data(getLLinks())
         .join('text')
         .attr('text-anchor', 'middle')
@@ -2022,13 +2031,21 @@ Note that this may cause slow performance on larger networks.">
     });
 
     $('#link-directed').parent().on('click', function () {
-      svg.select('g.links').selectAll('line').attr('marker-end', 'url(#end-arrow)');
+      svg.select('g.links').selectAll('line').attr('marker-end', function(l) {
+        if (l.directed || l.directed == null) {
+          return 'url(#end-arrow)';
+        } 
+      });
       settings['link-directed'] = true;
     });
 
     $('#link-bidirected').parent().on('click', function () {
       if(settings['link-directed']) {
-        svg.select('g.links').selectAll('line').attr('marker-start', 'url(#start-arrow)');
+        svg.select('g.links').selectAll('line').attr('marker-start', function(l) {
+          if (l.directed || l.directed == null) {
+            return 'url(#start-arrow)';
+          } 
+        });
         settings['link-bidirected'] = true;
       }
     });
