--- a/components/files.html
+++ b/components/files.html
@@ -943,6 +943,9 @@ Please note that this causes MicrobeTrace to store data on your computer's hard 
           message(`Parsing ${file.name} as Link List...`);
           let l = 0;
 
+          let sources = [];
+          let targets = [];
+          
           let forEachLink = link => {
             const keys = Object.keys(link);
             const n = keys.length;
